--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -68,7 +68,7 @@
   }
 
   //新規アカウント作成
-  .new-account-view {
+  .sign_up {
     background-color: rgb(224, 219, 219);
   }
 
@@ -86,10 +86,67 @@
   .field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 0.5rem;
+    margin-bottom: 20px;
   }
 
-  .label {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
+  .field label {
+    margin-bottom: 0;
+    text-align: left;
+  }
+
+  .form-control {
+    width: auto;
+    height: 30px;
+  }
+  
+  .btn input[type="submit"] {
+    background-color: #ff5733; /* ボタンの背景色をオレンジ色に設定 */
+    color: white;             /* テキストの色を白に設定 */
+    border: none;             /* ボーダーを削除 */
+    padding: 15px 20px;       /* 余白を追加 */
+    border-radius: 5px;       /* ボタンの角を丸くする */
+    cursor: pointer;          /* ポインター表示 */
+    width: 400px;
+  }
+  
+  .login_link a{
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 15px 79px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  //ログインフォーム
+  .login-header{ 
+    width: 100%;
+    max-width: 500px;
+    padding: 30px;
+    background-color: white;
+    box-sizing: border-box;
+    margin: 100px auto;
+    text-align: center;
+    line-height: 50px;
+  }
+
+  .infield {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .infield label {
+    margin-bottom: 0;
+    text-align: left;
+    line-height: 0.5;
+  }
+
+  .new_link a{
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 15px 168px;
+    border-radius: 5px;
+    cursor: pointer;
   }
