--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<body class = "new-account-view">
+<body class = "sign_up">
 <div class = "new-account-header">
   <h2 class = "new-title" >新規登録</h2>
 
@@ -6,37 +6,33 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :name, "ユーザー名*" %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "ユーザー名を入力", class: "form-cottrol" %>
+    <%= f.label :name, "ユーザー名*" %>
+    <%= f.text_field :name, autofocus: true, placeholder: "ユーザー名を入力", class: "form-control" %>
   </div>
 
   <div class="field">
-    <%= f.label :email, "メールアドレス*"%><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "メールアドレスを入力", class: "form-cottrol" %>
+    <%= f.label :email, "メールアドレス*"%>
+    <%= f.email_field :email, autofocus: true, placeholder: "メールアドレスを入力", class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :password, "パスワード*"%>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上のパスワード)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "パスワードを入力", class: "form-cottrol" %>
+    <%= f.password_field :password, placeholder: "パスワードを入力", class: "form-control" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, "確認用パスワード*" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "確認用パスワードを入力", class: "form-cottrol" %>
+    <%= f.label :password_confirmation, "確認用パスワード*" %>
+    <%= f.password_field :password_confirmation, placeholder: "確認用パスワードを入力", class: "form-control" %>
   </div>
 
-  <div class="actions">
+  <div class="btn">
     <%= f.submit "新しいアカウントを作成" %>
   </div>
+<div class = "login_link">
+  <p><%= link_to "アカウントをお持ちの方はこちら", new_user_session_path(@user) %>
+</div>
 
-  <div class = "hold-account">
-  <%= link_to "アカウントをお持ちの方はログイン", "#"%>
-  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
 </div>
 </body>
