--- a/app/views/users/edit_account.html.erb
+++ b/app/views/users/edit_account.html.erb
@@ -4,40 +4,41 @@
     </header>
 
     <nav class = "setting-content">
-        <ul>
+        <li class = "nav-item">
             <th><%= link_to "アカウント", user_path(@user)%></th>
             <th><%= link_to "プロフィール", profile_user_path(@user) %></th>
-        </ul>
+        </li>
     </nav>
     <div class = "account-header">
         <h3>アカウント</h3>
     </div>
     <%= form_with model: @user, url: update_account_user_path(@user), method: :patch, local: true do |f| %>
-        <div>
-          <%= f.label :email %><br>
+        <div class = "change-account">
+          <%= f.label :email,"メールアドレス" %><br>
           <%= f.email_field :email %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.label :password, "新しいパスワード" %><br>
           <%= f.password_field :password, autocomplete: "new-password" %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.label :password_confirmation, "パスワード確認" %><br>
           <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.label :current_password, "現在のパスワード（必須）" %><br>
           <%= f.password_field :current_password, autocomplete: "current-password" %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.submit "保存" %>
         </div>
 
-        <div>
+        <div class = "change-account">
             <%= link_to "キャンセル", user_path(@user) %>
         </div>
       <% end %>
+</body>
