--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -9,28 +9,31 @@
             <th><%= link_to "プロフィール", profile_user_path(@user) %></th>
         </ul>
     </nav>
+    <div class = "account-header">
+    <h3>プロフィール</h3>
+    </div>
 
     <%= form_with model: @user, url: update_profile_user_path(@user), method: :patch, local: true do |f| %>
-        <div>
+        <div class = "change-account">
           <%= f.label :avatar, "アイコン画像" %><br>
           <%= f.file_field :avatar %>
         </div>
         
-        <div>
+        <div class = "change-account">
           <%= f.label :name, "ユーザー名" %><br>
           <%= f.text_field :name %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.label :introduction, "自己紹介" %><br>
           <%= f.text_area :introduction %>
         </div>
       
-        <div>
+        <div class = "change-account">
           <%= f.submit "保存する" %>
         </div>
 
-        <div>
+        <div class = "change-account">
             <%= link_to "キャンセル", profile_user_path(@user) %>
         </div>
     <% end %>
