--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -20,7 +20,7 @@
         <% @user.avatar.attached? %>
         <%= image_tag @user.avatar, alt: "ユーザーアイコン", class: "user-avator" %>
         <% else %>
-        <%= image_tag "no_icon_image.png", alt: "デフォルトアイコン", class: "user-avatar" %>
+        <%= image_tag "no_icon_.png", alt: "デフォルトアイコン", class: "user-avatar" %>
         <% end %>
         <p>名前 <%= @user.name %></p>
         <p>自己紹介 <%= @user.introduction %></p>
