プロフィール画面修正

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -16,11 +16,10 @@
     </div>
     <div class = "account-view">
         <p>アイコン画像</p>
-         <% if @user.present? %>
-        <% @user.avatar.attached? %>
+        <% if @user.present? && @user.avatar.attached? %>
         <%= image_tag @user.avatar, alt: "ユーザーアイコン", class: "user-avator" %>
         <% else %>
-        <%= image_tag "no_icon_.png", alt: "デフォルトアイコン", class: "user-avatar" %>
+        <%= image_tag "no_icon.png", alt: "デフォルトアイコン", class: "user-avatar" %>
         <% end %>
         <p>名前 <%= @user.name %></p>
         <p>自己紹介 <%= @user.introduction %></p>
